[package]
name = "hysteresis"
version = "0.1.0"
edition = "2021"

[lib]
name = "hysteresis"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release-with-debug]
inherits = "release"
debug = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
