[package]
name = "hysteresis"
version = "0.1.0"
edition = "2021"

[lib]
name = "hysteresis"
path = "src/lib.rs"

[[bin]]
name = "hysteresis_bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = "0.5.4"
nom = "7.1.3"
enum-display-derive = "0.1.1"

[profile.release-with-debug]
inherits = "release"
debug = true

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
